feat: rename download namespace and re-deploy cluster resources

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
     "database": "folder_database",
     "default": "folder_packages",
     "download": "folder_download",
+    "downloads": "folder_download",
     "flux-system": "folder_controllers",
     "kube-system": "folder_kubernetes",
     "network": "folder_connection",
@@ -85,6 +86,7 @@
     "database": "database",
     "default": "home",
     "download": "download",
+    "downloads": "download",
     "flux-system": "pipe",
     "kube-system": "kubernetes",
     "network": "connection",
