--- a/kubernetes/apps/downloads/flaresolverr/ks.yaml
+++ b/kubernetes/apps/downloads/flaresolverr/ks.yaml
@@ -4,13 +4,13 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app flaresolverr
-  namespace: &namespace download
+  namespace: &namespace downloads
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   interval: 30m
-  path: ./kubernetes/apps/download/flaresolverr/app
+  path: ./kubernetes/apps/downloads/flaresolverr/app
   prune: true
   sourceRef:
     kind: GitRepository
