--- a/kubernetes/apps/downloads/kustomization.yaml
+++ b/kubernetes/apps/downloads/kustomization.yaml
@@ -2,14 +2,14 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: download
+namespace: downloads
 components:
   - ../../components/alerts
   - ../../components/namespace
   - ../../components/sops
   - ../../components/substitutions
-resources: []
+resources:
   # Flux-Kustomizations
-  # - ./flaresolverr/ks.yaml
-  # - ./pinchflat/ks.yaml
-  # - ./qbittorrent/ks.yaml
+  - ./flaresolverr/ks.yaml
+  - ./pinchflat/ks.yaml
+  - ./qbittorrent/ks.yaml
