--- a/kubernetes/apps/observability/exporters/qbittorrent-exporter/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/exporters/qbittorrent-exporter/app/helmrelease.yaml
@@ -33,7 +33,7 @@ spec:
               tag: v1.6.0@sha256:b987d19693a5b2fe7314b22009c6302e084ec801fcf96afaf14065b4cdafc842
             env:
               EXPORTER_PORT: &port 8000
-              QBITTORRENT_HOST: qbittorrent.download.svc.cluster.local
+              QBITTORRENT_HOST: qbittorrent.downloads.svc.cluster.local
               QBITTORRENT_PORT: 80
             probes:
               liveness:
