--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -81,14 +81,14 @@ spec:
             editable: true
             options:
               path: /var/lib/grafana/dashboards/default-folder
-          - name: download
+          - name: downloads
             orgId: 1
-            folder: Download
+            folder: Downloads
             type: file
             disableDeletion: false
             editable: true
             options:
-              path: /var/lib/grafana/dashboards/download-folder
+              path: /var/lib/grafana/dashboards/downloads-folder
           - name: flux
             orgId: 1
             folder: Flux
@@ -197,7 +197,7 @@ spec:
           url: https://raw.githubusercontent.com/dragonflydb/dragonfly/main/tools/local/monitoring/grafana/provisioning/dashboards/dragonfly.json
           datasource: Prometheus
       default:
-      download:
+      downloads:
         flaresolverr:
           # renovate: depName="FlareSolverr"
           gnetId: 19363
