Revert "fix(kubernetes-dashboard): modify ingress"
This reverts commit cfee23d02386eebbc7122035b7a679bc2a3306ce.

--- a/kubernetes/apps/observability/kubernetes-dashboard/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/kubernetes-dashboard/app/helmrelease.yaml
@@ -25,20 +25,20 @@ spec:
       retries: 3
   values:
     app:
+      ingress:
+        enabled: true
+        annotations:
+          nginx.ingress.kubernetes.io/whitelist-source-range: ${NET_WHITELIST_IP_RANGES}
+        ingressClassName: internal
+        hosts:
+          - k8s-dashboard.${SECRET_DOMAIN}
+        tls:
+          # No need for seperate certificates. Will use ingress-nginx.
+          enabled: false
       settings:
         global:
           clusterName: ${CLUSTER_NAME}
           itemsPerPage: 50
-    ingress:
-      enabled: true
-      className: internal
-      annotations:
-        nginx.ingress.kubernetes.io/whitelist-source-range: ${NET_WHITELIST_IP_RANGES}
-      hosts:
-        - &host k8s-dashboard.${SECRET_DOMAIN}
-      tls:
-        - hosts:
-            - *host
     api:
       containers:
         resources:
