feat: deploy nextcloud

--- a/kubernetes/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/apps/self-hosted/kustomization.yaml
@@ -14,4 +14,5 @@ resources:
   - ./hoarder/ks.yaml
   - ./immich/ks.yaml
   - ./immich-folder-album-creator/ks.yaml
+  - ./nextcloud/ks.yaml
   - ./searxng/ks.yaml
