fix(nextcloud): set readOnlyRootFilesystem to false

--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -80,6 +80,7 @@ spec:
         runAsNonRoot: true
         runAsUser: &uid 5000
         runAsGroup: *uid
+        readOnlyRootFilesystem: false
       defaultConfigs:
         redis.config.php: false
         s3.config.php: false
