--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -40,15 +40,15 @@ spec:
             - secretRef:
                 name: *app
       extraEnv:
-        - name: REDIS_HOST
-          value: dragonfly.database.svc.cluster.local
-        - name: REDIS_HOST_PORT
-          value: "6379"
-        - name: REDIS_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: *app
-              key: REDIS_PASSWORD
+        # - name: REDIS_HOST
+        #   value: dragonfly.database.svc.cluster.local
+        # - name: REDIS_HOST_PORT
+        #   value: "6379"
+        # - name: REDIS_PASSWORD
+        #   valueFrom:
+        #     secretKeyRef:
+        #       name: *app
+        #       key: REDIS_PASSWORD
         - name: S3_ACCESS_KEY
           valueFrom:
             secretKeyRef:
