--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -123,7 +123,7 @@ spec:
                 'hostname'       => 's3.${SECRET_DOMAIN}',
                 'port'           => 443,
                 'bucket'         => 'nextcloud'',
-                'autocreate'     => false,
+                'autocreate'     => 'false',
                 'key'            => getenv('S3_ACCESS_KEY'),
                 'secret'         => getenv('S3_SECRET_KEY'),
               ),
