--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -28,11 +28,14 @@ spec:
       namespace: storage
   values:
     deploymentAnnotations:
-      reloader.stakater.com/auto: "true"
+      secret.reloader.stakater.com/reload: *app
     image:
+      repository: public.ecr.aws/docker/library/nextcloud
       flavor: fpm-alpine
+    phpClientHttpsFix:
+      enabled: true
     nextcloud:
-      host: nextcloud.${SECRET_DOMAIN}
+      host: &host nextcloud.${SECRET_DOMAIN}
       extraInitContainers:
         - name: init-db
           image: ghcr.io/onedr0p/postgres-init:16
@@ -40,15 +43,17 @@ spec:
             - secretRef:
                 name: *app
       extraEnv:
-        # - name: REDIS_HOST
-        #   value: dragonfly.database.svc.cluster.local
-        # - name: REDIS_HOST_PORT
-        #   value: "6379"
-        # - name: REDIS_PASSWORD
-        #   valueFrom:
-        #     secretKeyRef:
-        #       name: *app
-        #       key: REDIS_PASSWORD
+        - name: REDIS_HOST
+          value: dragonfly.database.svc.cluster.local
+        - name: REDIS_HOST_PORT
+          value: "6379"
+        - name: REDIS_DATABASE
+          value: "1"
+        - name: REDIS_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: *app
+              key: REDIS_PASSWORD
         - name: S3_ACCESS_KEY
           valueFrom:
             secretKeyRef:
@@ -76,12 +81,6 @@ spec:
           secure: ssl
           port: 465
           authtype: LOGIN
-      securityContext:
-        runAsNonRoot: true
-        runAsUser: &uid 5000
-        runAsGroup: *uid
-        fsGroup: *uid
-        fsGroupChangePolicy: OnRootMismatch
       defaultConfigs:
         redis.config.php: false
         s3.config.php: false
@@ -110,8 +109,8 @@ spec:
               'redis' => array(
                 'host' => getenv('REDIS_HOST'),
                 'port' => getenv('REDIS_HOST_PORT') ?: 6379,
+                'dbindex' => getenv('REDIS_DATABASE') ?: 0,
                 'password' => getenv('REDIS_PASSWORD'),
-                'dbindex' => 5,
               )
             );
         s3.config.php: |-
@@ -206,6 +205,9 @@ spec:
           location ~ ^/(?:autotest|occ|issue|indie|db_|console) {
             deny all;
           }
+      tls:
+        - hosts:
+            - *host
     nginx:
       enabled: true
       config:
@@ -217,6 +219,8 @@ spec:
           memory: 24Mi
         limits:
           memory: 128Mi
+      securityContext:
+        runAsGroup: 82
     internalDatabase:
       enabled: false
     externalDatabase:
@@ -237,3 +241,7 @@ spec:
         enabled: false
     cronjob:
       enabled: true
+      securityContext:
+        runAsGroup: 82
+    securityContext:
+      fsGroupChangePolicy: OnRootMismatch
