--- a/kubernetes/apps/self-hosted/nextcloud/ks.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/ks.yaml
@@ -25,7 +25,7 @@ spec:
   postBuild:
     substitute:
       APP: *app
-      APP_UID: &uid ${CONFIG_APP_UID}
+      APP_UID: &uid "82"
       APP_GID: *uid
       VOLSYNC_CLAIM: *app
       VOLSYNC_ACCESSMODES: &accessModes ReadWriteOnce
