--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -128,6 +128,11 @@ spec:
               ),
             ),
           );
+      securityContext:
+        runAsUser: 82
+        runAsGroup: 82
+        runAsNonRoot: true
+        readOnlyRootFilesystem: false
       phpConfigs:
         uploadLimit.ini: |
           upload_max_filesize = 10G
