--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -43,17 +43,17 @@ spec:
             - secretRef:
                 name: *app
       extraEnv:
-        - name: REDIS_HOST
-          value: dragonfly.database.svc.cluster.local
-        - name: REDIS_HOST_PORT
-          value: "6379"
-        - name: REDIS_DATABASE
-          value: "1"
-        - name: REDIS_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: *app
-              key: REDIS_PASSWORD
+        # - name: REDIS_HOST
+        #   value: dragonfly.database.svc.cluster.local
+        # - name: REDIS_HOST_PORT
+        #   value: "6379"
+        # - name: REDIS_DATABASE
+        #   value: "1"
+        # - name: REDIS_PASSWORD
+        #   valueFrom:
+        #     secretKeyRef:
+        #       name: *app
+        #       key: REDIS_PASSWORD
         - name: S3_ACCESS_KEY
           valueFrom:
             secretKeyRef:
@@ -100,6 +100,15 @@ spec:
             'default_phone_region' => 'SE',
             'trashbin_retention_obligation' => 'auto, 30',
             'auth.bruteforce.protection.enabled' => true,
+          );
+        # log levels: 0=debug, 1=info, 2=warn, 3=error, 4=fatal
+        logging.config.php: |-
+          <?php
+          $CONFIG = array (
+            'log_type' => 'file',
+            'logfile' => 'nextcloud.log',
+            'loglevel' => 0,
+            'logdateformat' => 'F d, Y H:i:s'
           );
         redis.config.php: |-
           <?php
