--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -134,10 +134,12 @@ spec:
               'arguments' => array(
                 'hostname'       => 's3.${SECRET_DOMAIN}',
                 'port'           => 443,
+                'use_path_style' => true,
                 'bucket'         => 'nextcloud',
                 'autocreate'     => false,
                 'key'            => getenv('S3_ACCESS_KEY'),
                 'secret'         => getenv('S3_SECRET_KEY'),
+                'use_ssl'        => true,
               ),
             ),
           );
@@ -223,8 +225,6 @@ spec:
           location ~ ^/(?:autotest|occ|issue|indie|db_|console) {
             deny all;
           }
-      hosts:
-          - *host
       tls:
         - hosts:
             - *host
