--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -43,17 +43,17 @@ spec:
             - secretRef:
                 name: *app
       extraEnv:
-        # - name: REDIS_HOST
-        #   value: dragonfly.database.svc.cluster.local
-        # - name: REDIS_HOST_PORT
-        #   value: "6379"
-        # - name: REDIS_DATABASE
-        #   value: "1"
-        # - name: REDIS_PASSWORD
-        #   valueFrom:
-        #     secretKeyRef:
-        #       name: *app
-        #       key: REDIS_PASSWORD
+        - name: REDIS_HOST
+          value: dragonfly.database.svc.cluster.local
+        - name: REDIS_HOST_PORT
+          value: "6379"
+        - name: REDIS_DATABASE
+          value: "1"
+        - name: REDIS_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: *app
+              key: REDIS_PASSWORD
         - name: S3_ACCESS_KEY
           valueFrom:
             secretKeyRef:
