--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -81,9 +81,22 @@ spec:
           secure: ssl
           port: 465
           authtype: LOGIN
+      objectstore:
+        s3:
+          enabled: true
+          host: s3.{SECRET_DOMAIN}
+          ssl: true
+          bucket: *app
+          usePathStyle: true
+          region: home
+          autocreate: true
+          existingSecret: *app
+          secretKeys:
+            accessKey: S3_ACCESS_KEY
+            secretKey: S3_SECRET_KEY
       defaultConfigs:
         redis.config.php: false
-        s3.config.php: false
+        # s3.config.php: false
       configs:
         # log levels: 0=debug, 1=info, 2=warn, 3=error, 4=fatal
         logging.config.php: |-
@@ -126,23 +139,23 @@ spec:
                 'password' => getenv('REDIS_PASSWORD'),
               )
             );
-        s3.config.php: |-
-          <?php
-          $CONFIG = array (
-            'objectstore' => array(
-              'class' => '\\OC\\Files\\ObjectStore\\S3',
-              'arguments' => array(
-                'hostname'       => 's3.${SECRET_DOMAIN}',
-                'port'           => 443,
-                'use_path_style' => true,
-                'bucket'         => 'nextcloud',
-                'autocreate'     => false,
-                'key'            => getenv('S3_ACCESS_KEY'),
-                'secret'         => getenv('S3_SECRET_KEY'),
-                'use_ssl'        => true,
-              ),
-            ),
-          );
+        # s3.config.php: |-
+        #   <?php
+        #   $CONFIG = array (
+        #     'objectstore' => array(
+        #       'class' => '\\OC\\Files\\ObjectStore\\S3',
+        #       'arguments' => array(
+        #         'hostname'       => 's3.${SECRET_DOMAIN}',
+        #         'port'           => 443,
+        #         'use_path_style' => true,
+        #         'bucket'         => 'nextcloud',
+        #         'autocreate'     => false,
+        #         'key'            => getenv('S3_ACCESS_KEY'),
+        #         'secret'         => getenv('S3_SECRET_KEY'),
+        #         'use_ssl'        => true,
+        #       ),
+        #     ),
+        #   );
       # securityContext:
       #   runAsUser: 82
       #   runAsGroup: 82
