--- a/kubernetes/apps/self-hosted/nextcloud/ks.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/ks.yaml
@@ -10,7 +10,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   components:
-    - ../../../../components/volsync
+    - ../../../../components/pvc
   dependsOn:
     - name: cloudnative-pg-cluster
       namespace: database
@@ -25,17 +25,20 @@ spec:
   postBuild:
     substitute:
       APP: *app
-      APP_UID: &uid "82"
-      APP_GID: *uid
-      VOLSYNC_CLAIM: *app
-      VOLSYNC_ACCESSMODES: &accessModes ReadWriteOnce
-      VOLSYNC_STORAGECLASS: &storageClass ${CLUSTER_STORAGE_BLOCK}
-      VOLSYNC_SNAPSHOTCLASS: *storageClass
-      VOLSYNC_CACHE_ACCESSMODES: *accessModes
-      VOLSYNC_CACHE_SNAPSHOTCLASS: *storageClass
-      VOLSYNC_CAPACITY: &capacity 5Gi
-      VOLSYNC_CACHE_CAPACITY: *capacity
-      VOLSYNC_TIME: "30 4 * * *"
+      # APP_UID: &uid "82"
+      # APP_GID: *uid
+      # VOLSYNC_CLAIM: *app
+      # VOLSYNC_ACCESSMODES: &accessModes ReadWriteOnce
+      # VOLSYNC_STORAGECLASS: &storageClass ${CLUSTER_STORAGE_BLOCK}
+      # VOLSYNC_SNAPSHOTCLASS: *storageClass
+      # VOLSYNC_CACHE_ACCESSMODES: *accessModes
+      # VOLSYNC_CACHE_SNAPSHOTCLASS: *storageClass
+      # VOLSYNC_CAPACITY: &capacity 5Gi
+      # VOLSYNC_CACHE_CAPACITY: *capacity
+      # VOLSYNC_TIME: "30 4 * * *"
+      PVC_ACCESSMODES: ReadWriteOnce
+      PVC_STORAGECLASS: ${CLUSTER_STORAGE_BLOCK}
+      PVC_CAPACITY: 5Gi
   prune: true
   sourceRef:
     kind: GitRepository
