fix(immich): remove yaml anchor

--- a/kubernetes/apps/self-hosted/immich/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/immich/app/helmrelease.yaml
@@ -29,7 +29,7 @@ spec:
   values:
     controllers:
       immich:
-        annotations: &annotations
+        annotations:
           reloader.stakater.com/auto: "true"
         containers:
           server:
