--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -35,7 +35,7 @@ spec:
     phpClientHttpsFix:
       enabled: true
     nextcloud:
-      host: &host nextcloud.${SECRET_DOMAIN}
+      host: &host nc.${SECRET_DOMAIN}
       extraInitContainers:
         - name: init-db
           image: ghcr.io/onedr0p/postgres-init:16
@@ -96,7 +96,7 @@ spec:
         misc.config.php: |-
           <?php
           $CONFIG = array (
-            'overwrite.cli.url' => 'https://nextcloud.${SECRET_DOMAIN}',
+            'overwrite.cli.url' => 'https://nc.${SECRET_DOMAIN}',
             'default_phone_region' => 'SE',
             'trashbin_retention_obligation' => 'auto, 30',
             'auth.bruteforce.protection.enabled' => true,
