fix(ingress-nginx): add allowSnippetAnnotations

--- a/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
@@ -26,6 +26,7 @@ spec:
     fullnameOverride: *app
     controller:
       replicaCount: 2
+      allowSnippetAnnotations: true
       service:
         annotations:
           lbipam.cilium.io/ips: ${SVC_NGINX_INTERNAL_IP}
