--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -30,8 +30,12 @@ spec:
     podAnnotations:
       reloader.stakater.com/auto: "true"
     image:
-      repository: public.ecr.aws/docker/library/nextcloud
+      # repository: public.ecr.aws/docker/library/nextcloud
+      # flavor: apache
+      repository: nextcloud
       flavor: apache
+      tag: 30.0.5-apache
+      pullPolicy: IfNotPresent
     phpClientHttpsFix:
       enabled: true
     nextcloud:
