--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -170,19 +170,25 @@ spec:
     # This seems to be required for Nextcloud initialization which takes a long time.
     startupProbe:
       enabled: true
-      initialDelaySeconds: 5
-      periodSeconds: 10
-      timeoutSeconds: 5
-      failureThreshold: 360
+      initialDelaySeconds: 60
+      periodSeconds: 120
+      timeoutSeconds: 20
+      failureThreshold: 60
       successThreshold: 1
-    livenessProbe: &probes
+    livenessProbe:
       enabled: true
-      initialDelaySeconds: 5
-      periodSeconds: 10
-      timeoutSeconds: 5
+      initialDelaySeconds: 10
+      periodSeconds: 30
+      timeoutSeconds: 10
       failureThreshold: 3
       successThreshold: 1
-    readinessProbe: *probes
+    readinessProbe:
+      enabled: true
+      initialDelaySeconds: 60
+      periodSeconds: 60
+      timeoutSeconds: 5
+      failureThreshold: 10
+      successThreshold: 1
     ingress:
       enabled: true
       className: internal
