fix(nextcloud): disable probes

--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -169,21 +169,21 @@ spec:
         memory: 2Gi
     # This seems to be required for Nextcloud initialization which takes a long time.
     startupProbe:
-      enabled: true
+      enabled: false
       initialDelaySeconds: 60
       periodSeconds: 120
       timeoutSeconds: 20
       failureThreshold: 60
       successThreshold: 1
     livenessProbe:
-      enabled: true
+      enabled: false
       initialDelaySeconds: 10
       periodSeconds: 30
       timeoutSeconds: 10
       failureThreshold: 3
       successThreshold: 1
     readinessProbe:
-      enabled: true
+      enabled: false
       initialDelaySeconds: 60
       periodSeconds: 60
       timeoutSeconds: 5
