--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -30,16 +30,16 @@ spec:
     podAnnotations:
       reloader.stakater.com/auto: "true"
     image:
-      # repository: public.ecr.aws/docker/library/nextcloud
+      repository: public.ecr.aws/docker/library/nextcloud
+      flavor: fpm
+      # repository: nextcloud
       # flavor: apache
-      repository: nextcloud
-      flavor: apache
-      tag: 30.0.5-apache
-      pullPolicy: IfNotPresent
+      # tag: 30.0.5-apache
+      # pullPolicy: IfNotPresent
     phpClientHttpsFix:
       enabled: true
     nextcloud:
-      host: &host nc.${SECRET_DOMAIN}
+      host: nc.${SECRET_DOMAIN}
       extraInitContainers:
         - name: init-db
           image: ghcr.io/onedr0p/postgres-init:16
@@ -81,7 +81,8 @@ spec:
         apcu.config.php: true                   # Default configuration to define APCu as local cache.
         apps.config.php: true                   # Default configuration for apps.
         autoconfig.php: false                   # Default auto-configuration for databases. Set to false, use CNPG instead.
-        redis.config.php: false                 # Default Redis configuration. Set to false, use Dragonfly instead.
+        # redis.config.php: false                 # Default Redis configuration. Set to false, use Dragonfly instead.
+        redis.config.php: true                  # Default Redis configuration. Set to false, use Dragonfly instead.
         reverse-proxy.config.php: true          # Default reverse proxy configuration.
         s3.config.php: false                    # Default configuration for S3 as primary Object Storage. Set to false, not in use.
         smtp.config.php: true                   # Default configuration for SMTP.
@@ -140,24 +141,36 @@ spec:
         #     ),
         #     'forwarded_for_headers' => array('HTTP_X_FORWARDED_FOR'),
         #   );
-        redis.config.php: |-
-          <?php
-            $CONFIG = array (
-              'memcache.distributed' => '\OC\Memcache\Redis',
-              'memcache.locking' => '\OC\Memcache\Redis',
-              'redis' => array(
-                'host' => getenv('REDIS_HOST'),
-                'port' => getenv('REDIS_HOST_PORT') ?: 6379,
-                'dbindex' => getenv('REDIS_DATABASE') ?: 0,
-                'password' => getenv('REDIS_PASSWORD'),
-              )
-            );
+        # redis.config.php: |-
+        #   <?php
+        #     $CONFIG = array (
+        #       'memcache.distributed' => '\OC\Memcache\Redis',
+        #       'memcache.locking' => '\OC\Memcache\Redis',
+        #       'redis' => array(
+        #         'host' => getenv('REDIS_HOST'),
+        #         'port' => getenv('REDIS_HOST_PORT') ?: 6379,
+        #         'dbindex' => getenv('REDIS_DATABASE') ?: 0,
+        #         'password' => getenv('REDIS_PASSWORD'),
+        #       )
+        #     );
       phpConfigs:
         uploadLimit.ini: |
           upload_max_filesize = 16G
           post_max_size = 16G
           max_input_time = 3600
           max_execution_time = 3600
+        www.conf: |
+          [www]
+          user = www-data
+          group = www-data
+          listen = 127.0.0.1:9000
+          pm = dynamic
+          pm.max_children = 57
+          pm.start_servers = 14
+          pm.min_spare_servers = 14
+          pm.max_spare_servers = 42
+          pm.max_requests = 500
+          pm.process_idle_timeout = 10s
     persistence:
       enabled: true
       existingClaim: ${VOLSYNC_CLAIM}
@@ -220,8 +233,17 @@ spec:
           location ~ ^/(?:autotest|occ|issue|indie|db_|console) {
             deny all;
           }
-      path: /
-      pathType: Prefix
+    nginx:
+      enabled: true
+      config:
+        headers:
+          "Strict-Transport-Security": "max-age=15768000; includeSubDomains;"
+      resources:
+        requests:
+          cpu: 50m
+          memory: 24Mi
+        limits:
+          memory: 128Mi
     internalDatabase:
       enabled: false
     externalDatabase:
