--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -27,19 +27,15 @@ spec:
     - name: democratic-csi-nfs
       namespace: storage
   values:
-    podAnnotations:
-      reloader.stakater.com/auto: "true"
+    fullnameOverride: *app
+    deploymentAnnotations:
+      secret.reloader.stakater.com/reload: *app
     image:
       repository: public.ecr.aws/docker/library/nextcloud
-      flavor: fpm
-      # repository: nextcloud
-      # flavor: apache
-      # tag: 30.0.5-apache
-      # pullPolicy: IfNotPresent
-    phpClientHttpsFix:
-      enabled: true
+      tag: 30.0.5-fpm-alpine
+      flavor: fpm-alpine
     nextcloud:
-      host: nc.${SECRET_DOMAIN}
+      host: &host nc.${SECRET_DOMAIN}
       extraInitContainers:
         - name: init-db
           image: ghcr.io/onedr0p/postgres-init:16
@@ -75,19 +71,6 @@ spec:
           secure: ssl
           port: 465
           authtype: LOGIN
-      defaultConfigs:
-        .htaccess: true                         # Default .htaccess to protect /var/www/html/config.
-        apache-pretty-urls.config.php: true     # Default Apache configuration for rewrite URLs.
-        apcu.config.php: true                   # Default configuration to define APCu as local cache.
-        apps.config.php: true                   # Default configuration for apps.
-        autoconfig.php: false                   # Default auto-configuration for databases. Set to false, use CNPG instead.
-        # redis.config.php: false                 # Default Redis configuration. Set to false, use Dragonfly instead.
-        redis.config.php: true                  # Default Redis configuration. Set to false, use Dragonfly instead.
-        reverse-proxy.config.php: true          # Default reverse proxy configuration.
-        s3.config.php: false                    # Default configuration for S3 as primary Object Storage. Set to false, not in use.
-        smtp.config.php: true                   # Default configuration for SMTP.
-        swift.config.php: false                 # Default configuration for Swift as primary Object Storage. Set to false, not in use.
-        upgrade-disable-web.config.php: true    # Default config to disable the web-based updater as the default docker image does not suppor it.
       configs:
         # Log levels: 0=debug, 1=info, 2=warn, 3=error, 4=fatal
         logging.config.php: |-
@@ -103,26 +86,17 @@ spec:
           $CONFIG = array (
             'overwriteprotocol' => 'https',
             'overwrite.cli.url' => 'https://nc.${SECRET_DOMAIN}',
+            'overewritehost' => 'nc.${SECRET_DOMAIN}',
             'filelocking.enabled' => 'true',
-            'loglevel' => '2',
-            'enable_previews' => true,
-            'trusted_domains' =>
-              [
-                'nextcloud',
-                'nc.${SECRET_DOMAIN}'
-              ],
-            'trusted_proxies' =>
-              [
-                '10.69.0.0/16',
-              ],
-            'forwarded_for_headers' =>
-              [
-                0 => 'X-Forwarded-For',
-                1 => 'HTTP_X_FORWARDED_FOR'
-              ],
             'default_phone_region' => 'SE',
-            'allow_local_remote_servers' => true,
-            'bulkupload.enabled' => true,
+            'enable_previews' => true,
+            'maintenance_window_start' => 1,
+            'trusted_proxies' =>
+              array (
+                0 => '127.0.0.1',
+                1 => '10.69.0.0/16',
+                2 => '10.96.0.0/16',
+              ),
           );
         # misc.config.php: |-
         #   <?php
@@ -206,7 +180,6 @@ spec:
       enabled: true
       className: internal
       annotations:
-        nginx.ingress.kubernetes.io/affinity: cookie
         nginx.ingress.kubernetes.io/cors-allow-headers: "X-Forwarded-For"
         nginx.ingress.kubernetes.io/enable-cors: "true"
         nginx.ingress.kubernetes.io/server-snippet: |-
@@ -233,11 +206,18 @@ spec:
           location ~ ^/(?:autotest|occ|issue|indie|db_|console) {
             deny all;
           }
+      path: /
+      pathType: Prefix
+      tls:
+        - hosts:
+            - *host
     nginx:
       enabled: true
+      image:
+        repository: public.ecr.aws/nginx/nginx
+        tag: "1.27.4"
       config:
-        headers:
-          "Strict-Transport-Security": "max-age=15768000; includeSubDomains;"
+        default: true
       resources:
         requests:
           cpu: 50m
