--- a/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
@@ -29,7 +29,7 @@ spec:
       service:
         annotations:
           lbipam.cilium.io/ips: ${SVC_NGINX_INTERNAL_IP}
-        externalTrafficPolicy: Cluster
+        # externalTrafficPolicy: Cluster
       ingressClassResource:
         name: internal
         default: true
