fix(nextcloud): add service

--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -239,6 +239,8 @@ spec:
         passwordKey: POSTGRES_PASSWORD
     redis:
       enabled: false
+    service:
+        type: LoadBalancer
     metrics:
       enabled: false
       https: true
