--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -98,6 +98,7 @@ spec:
                 2 => '10.96.0.0/16',
                 3 => '192.168.20.0/24',
               ),
+              'forwarded_for_headers' => array('HTTP_X_FORWARDED_FOR'),
           );
         # misc.config.php: |-
         #   <?php
