Revert "fix(nextcloud): temp disable securityContext"
This reverts commit 8ba987f607897d888f51bf541394ad5720e7f2e5.

--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -72,11 +72,11 @@ spec:
           secure: ssl
           port: 465
           authtype: LOGIN
-      # securityContext:
-      #   runAsNonRoot: true
-      #   runAsUser: 82
-      #   runAsGroup: 82
-      #   readOnlyRootFilesystem: false
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 82
+        runAsGroup: 82
+        readOnlyRootFilesystem: false
       defaultConfigs:
         redis.config.php: false
       configs:
