fix(nextcloud): add maintenance_window_start to misc config

--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -94,6 +94,7 @@ spec:
           $CONFIG = array (
             'auth.bruteforce.protection.enabled' => true,
             'default_phone_region' => 'SE',
+            'maintenance_window_start' => 1,
             'trashbin_retention_obligation' => 'auto, 30',
           );
         proxy.config.php: |-
